--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "uuid": "^9.0.0"
   },
   "type": "module"
 }
